# pretty_panics

./: .gitignore  Cargo.toml  README.md
examples/: panic.rs  simple.rs  thiserror.rs
pretty_panic_proc_macro/: Cargo.toml
pretty_panic_proc_macro/src/: lib.rs
src/: lib.rs
