[package]
name = "pretty_panics"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/bizarre/pretty_panic"
license = "MIT"
description = "pretty panic messages"

[dependencies]
pretty_panic_proc_macro = { version = "0.1.1", no-default-features = true, path = "pretty_panic_proc_macro" }
anstyle = { version = "1.0.8", optional = true }

[features]
default = ["default_formatters"]
default_formatters = ["anstyle", "pretty_panic_proc_macro/default_formatters"]

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"